legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr79347.c-4.8.2-1.out.txt
pr79347.c: In function ‘n’:
pr79347.c:9:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i<c;i++)
   ^
pr79347.c:9:3: note: use option -std=c99 or -std=gnu99 to compile your code
